--- a/src/fe_frontend/templates/index.html
+++ b/src/fe_frontend/templates/index.html
@@ -1,8 +1,12 @@
 {% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="pt">
   <head>
     <title>Home</title>
+
+    <meta name="description" content="Serviço responsável por achar oportunidades dentro do mercado brasileiro de ações." />
+    <meta name="keywords" content="ibov,ibovespa,ações"/>
+
     <link
       rel="stylesheet"
       href="{% static 'bootstrap-5.3.2/css/bootstrap.min.css' %}"
@@ -18,10 +22,15 @@
         <div class="col-md-3">
           <h1>Papéis</h1>
 
+          <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Código ou nome" aria-label="" aria-describedby="button-addon2">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Pesquisar</button>
+          </div>
           <table class="table">
             <thead>
               <tr>
                 <th scope="col">Código</th>
+                <th scope="col">Barras</th>
                 <th scope="col">Habilitado</th>
               </tr>
             </thead>
@@ -29,6 +38,7 @@
               {% for ticker in tickers %}
                 <tr>
                   <td>{{ ticker.name }}</td>
+                  <td>{{ ticker.tickerdata_set.count }}</td>
                   <td>
                     {% if ticker.is_enabled %}
                     <span class="badge rounded-pill text-bg-success">&nbsp;</span>
