Initial tests using htmx to retrieve the tickers list

--- a/src/fe_frontend/templates/index.html
+++ b/src/fe_frontend/templates/index.html
@@ -1,59 +1,1 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="pt">
-  <head>
-    <title>Home</title>
-
-    <meta name="description" content="Serviço responsável por achar oportunidades dentro do mercado brasileiro de ações." />
-    <meta name="keywords" content="ibov,ibovespa,ações"/>
-
-    <link
-      rel="stylesheet"
-      href="{% static 'bootstrap-5.3.2/css/bootstrap.min.css' %}"
-    />
-    <script
-      type="text/javascript"
-      src="{% static 'bootstrap-5.3.2/js/bootstrap.min.js' %}"
-    ></script>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3">
-          <h1>Papéis</h1>
-
-          <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Código ou nome" aria-label="" aria-describedby="button-addon2">
-            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Pesquisar</button>
-          </div>
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">Código</th>
-                <th scope="col">Barras</th>
-                <th scope="col">Habilitado</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for ticker in tickers %}
-                <tr>
-                  <td>{{ ticker.name }}</td>
-                  <td>{{ ticker.tickerdata_set.count }}</td>
-                  <td>
-                    {% if ticker.is_enabled %}
-                    <span class="badge rounded-pill text-bg-success">&nbsp;</span>
-                    {% else %}
-                    <span class="badge rounded-pill text-bg-danger">&nbsp;</span>
-                    {% endif %}
-                  </td>
-                </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-
-        </div>
-        <div class="col-md-9"></div>
-      </div>
-    </div>
-  </body>
-</html>
+{% extends "base/base.html" %}
