--- a/src/fe_frontend/templates/base/base.html
+++ b/src/fe_frontend/templates/base/base.html
@@ -1,59 +1,63 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="pt">
-  <head>
-        <title>{% block title %}{% endblock title %}</title>
 
-    <meta name="description" content="Serviço responsável por achar oportunidades dentro do mercado brasileiro de ações." />
-    <meta name="keywords" content="ibov,ibovespa,ações"/>
+<head>
+    <title>{% block title %}{% endblock title %}</title>
 
-    <link
-      rel="stylesheet"
-      href="{% static 'bootstrap-5.3.2/css/bootstrap.min.css' %}"
-    />
-    <script
-      type="text/javascript"
-      src="{% static 'bootstrap-5.3.2/js/bootstrap.min.js' %}"
-    ></script>
+    <meta name="description"
+        content="Serviço responsável por achar oportunidades dentro do mercado brasileiro de ações." />
+    <meta name="keywords" content="ibov,ibovespa,ações" />
+
+    <link rel="stylesheet" href="{% static 'bootstrap-5.3.2/css/bootstrap.min.css' %}" />
+    <script type="text/javascript" src="{% static 'bootstrap-5.3.2/js/bootstrap.min.js' %}"></script>
 
     <script type="text/javascript" src="{% static 'htmx/1.9.6/htmx.min.js' %}"></script>
-  </head>
-  <body>
+</head>
+
+<body>
 
     {% include "base/navbar.html" %}
 
-    {% block content %}
-            <h1>Título da Página</h1>
-    {% endblock content %}
-{% comment %}
     <div class="container">
-      <div class="row">
-        <div class="col-md-3">
-          <h1>Papéis</h1>
-
-          <form hx-get="{% url 'search' %}" hx-trigger="submit, load" hx-target="#tickers-list">
-            <div class="input-group mb-3">
-              <input type="text" class="form-control" name="q" placeholder="Código ou nome" aria-label="">
-              <button class="btn btn-outline-secondary" type="submit">Pesquisar</button>
-            </div>
-          </form>
-
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">Código</th>
-                <th scope="col">Barras</th>
-                <th scope="col">Habilitado</th>
-              </tr>
-            </thead>
-            <tbody id="tickers-list">
-            </tbody>
-          </table>
-
-        </div>
-        <div class="col-md-9"></div>
-      </div>
+        <h1>{% block page_title %}{% endblock page_title %}</h1>
     </div>
-  </body>
+
+    <div class="container">
+        {% block content %}
+        {% endblock content %}
+    </div>
+
+    {% comment %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <h1>Papéis</h1>
+
+                <form hx-get="{% url 'search' %}" hx-trigger="submit, load" hx-target="#tickers-list">
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" name="q" placeholder="Código ou nome" aria-label="">
+                        <button class="btn btn-outline-secondary" type="submit">Pesquisar</button>
+                    </div>
+                </form>
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Código</th>
+                            <th scope="col">Barras</th>
+                            <th scope="col">Habilitado</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tickers-list">
+                    </tbody>
+                </table>
+
+            </div>
+            <div class="col-md-9"></div>
+        </div>
+    </div>
+</body>
+
 </html>
 {% endcomment %}
