--- a/src/fe_frontend/templates/base/navbar.html
+++ b/src/fe_frontend/templates/base/navbar.html
@@ -1,13 +1,10 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Controle de Risco</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Resultados</a>
+                    <a class="nav-link active" aria-current="page" href="{% url "index" %}">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url "strategies" %}">Estratégias</a>
