--- a/src/fe_frontend/templates/main/results.html
+++ b/src/fe_frontend/templates/main/results.html
@@ -2,7 +2,10 @@
 
 {% block title %}Resultados{% endblock title %}
 
+{% block page_title %}Página com Resultados{% endblock page_title %}
+
 {% block content %}
+
 <table class="table table-striped">
     <thead>
         <tr>
