--- a/src/fe_frontend/templates/base/navbar.html
+++ b/src/fe_frontend/templates/base/navbar.html
@@ -4,13 +4,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url "index" %}">Home</a>
+          <a class="nav-link" aria-current="page" href="{% url "index" %}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url "strategies" %}">Estratégias</a>
+          <a class="nav-link {{ active_tickers }}" href="{% url "tickers" %}">Papéis</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url "results" %}">Resultados</a>
+          <a class="nav-link {{ active_strategies }}" href="{% url "strategies" %}">Estratégias</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {{ active_results }}" href="{% url "results" %}">Resultados</a>
         </li>
       </ul>
     </div>
