--- a/src/fe_frontend/templates/main/results.html
+++ b/src/fe_frontend/templates/main/results.html
@@ -25,9 +25,30 @@
             <th>Retorno</th>
             <th>Núm. Trades</th>
             <th>Acertos</th>
+            <th>Ações</th>
         </tr>
     </thead>
     <tbody id="results-list">
     </tbody>
 </table>
+
+<div class="modal" tabindex="-1" id="graphicModal">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div id="graphic"></div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                    Fechar
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock content %}
