--- a/src/fe_frontend/templates/htmx/results/list.html
+++ b/src/fe_frontend/templates/htmx/results/list.html
@@ -9,5 +9,30 @@
   <td>{{ item.total_return }}</td>
   <td>{{ item.num_trades }}</td>
   <td>{{ item.num_win }}</td>
+  <td>
+    <button
+      type="button"
+      class="btn btn-primary"
+      hx-get="{% url 'x_results_graphic' item.uuid %}"
+      hx-target="#graphic"
+      data-bs-toggle="modal"
+      data-bs-target="#graphicModal"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="16"
+        height="16"
+        fill="currentColor"
+        class="bi bi-graph-up"
+        viewBox="0 0 16 16"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M0 0h1v15h15v1H0V0Zm14.817 3.113a.5.5 0 0 1 .07.704l-4.5 5.5a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61 4.15-5.073a.5.5 0 0 1 .704-.07Z"
+        />
+      </svg>
+    </button>
+  </td>
 </tr>
+
 {% endfor %}
