Add graphics to tho the system

--- a/src/fe_frontend/templates/base/navbar.html
+++ b/src/fe_frontend/templates/base/navbar.html
@@ -15,6 +15,9 @@
         <li class="nav-item">
           <a class="nav-link {{ active_results }}" href="{% url "results" %}">Resultados</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link {{ active_graphics }}" href="{% url "graphics" %}">Gráficos</a>
+        </li>
       </ul>
     </div>
   </div>
